<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/byq_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/byq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/byq_img"
            android:text="容量列表"
            android:textColor="#000"
            android:textSize="15dp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape"
            android:text="清空"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDC3C7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:listitem="@layout/listview_item">
        </ListView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BDC3C7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="30dp"
                android:textColor="#000"
                android:gravity="bottom"
                android:layout_weight="1"
                tools:ignore="NestedWeights,SpUsage" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BDC3C7"/>

            <EditText
                android:id="@+id/edit_left"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:hint="@string/OtherVolumes"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textColor="#000"
                android:textSize="30dp"
                android:text=""/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:text="@string/QuXiao"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_25" />

                <Button
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape"
                    android:text="@string/QueDing"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_25"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>